# webpack-wasm

./: .babelrc  .gitignore  .travis.yml  README.md  package.json  webpack.config.js
js/lib/: lib.js
wasm/: Cargo.toml
wasm/src/: lib.rs
